--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -1,10 +1,11 @@
 .header {
     display: grid;
     height: 5vh;
-    margin-top: 1vh;
+    padding-top: 1vh;
+    width: 100%;
     background-color: #ffffffeb;
     grid-template-columns: 60% 40%;
-    position:sticky;
+    position:fixed;
     top: 0;
     z-index: 100;
     // INICIO HEADER
