--- a/styles/views/_home.scss
+++ b/styles/views/_home.scss
@@ -37,14 +37,14 @@
 // MAIN
     .main-home {
         margin-top: 10.5vh;
-        z-index: 0;
+        width: 100vw;
         &__recommended {
             margin-bottom: 2vh;
             display: flex;
             flex-direction: column;
             &--section{
                 margin-top: 1vh;
-                width: auto;
+                // width: auto;
                 .main-home__recommended--h1 {
                     @include title;
                 }                    
@@ -58,13 +58,11 @@
                         box-shadow: 0 2px 4px 0 #0000004d;
                         margin: 0 5vw;
                         border-radius: 10px;
-                        width: 100%;
                         .main-home__recommended--pic{
                             width: 90vw;
                             height: 16vh;
                             display: flex;
                             justify-content: center;
-                            // border-bottom: #00008b 1px solid;
                             &-img{
                                 max-height: 100%;   
                                 max-width: 100%;
@@ -87,6 +85,7 @@
                             }
                             
                         }
+
                         .main-home__recommended--title{
                             display: flex;
                             padding: 1vh;
