--- a/styles/views/_inicio.scss
+++ b/styles/views/_inicio.scss
@@ -1,16 +1,10 @@
 .grid-container-inicio {
     display: grid;
     grid-template-rows: 10vh 90vh;
-    background-image: url("./images/inicioBackground.png");
+    background-image: url("../../images/inicioBackground.png");
     background-size:cover;
     background-position: 50% 80%;
-    // background: linear-gradient(230deg, #fc9e4e, #1d0e140d 30.71%),            
-    //             linear-gradient(165deg, #1d0e14, #1d0e143f 25%, rgba(0,255,0,0) 40.71%),
-    //             linear-gradient(50deg, #3a4b51 20%, rgba(0,255,0,0) 60.71%),            
-    //             linear-gradient(336deg, #faf3e8 5%,#fb8042 40.71%, #fbc157);            
-                    
     .header-inicio {
-        // display: flex;
         nav{
             height: 100%;
         }
