--- a/styles/style.scss
+++ b/styles/style.scss
@@ -88,11 +88,11 @@
                     }
                 }
                 &--btn1 {
-                    background-image: url("../images/back_arrow_5821.png");
+                    background-image: url("https://manusantamaria.github.io/developing-our-self/images/back_arrow_5821.png");
                 }
                 
                 &--btn2 {
-                    background-image: url("../images/forwardarrow_haciaadelante_4836.png");
+                    background-image: url("https://manusantamaria.github.io/developing-our-self/images/forwardarrow_haciaadelante_4836.png");
                 }
             }
         }
