--- a/styles/views/_signIn.scss
+++ b/styles/views/_signIn.scss
@@ -23,7 +23,7 @@
         height: 92vh;
         &__info {
             display: none;
-            background-image: url("../../images/mainMountain1.png");
+            background-image: url("https://manusantamaria.github.io/developing-our-self/images/mainMountain1.png");
             background-size: cover;
             background-position: 50% 10%;
             height: 100%;
