--- a/styles/views/_inicio.scss
+++ b/styles/views/_inicio.scss
@@ -1,7 +1,7 @@
 .grid-container-inicio {
     display: grid;
     grid-template-rows: 10vh 90vh;
-    background-image: url("../../developing-our-self/images/inicioBackground.png");
+    background-image: url("https://manusantamaria.github.io/developing-our-self/images/inicioBackground.png");
     background-size:cover;
     background-position: 50% 80%;
     .header-inicio {
