--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@
 }
 
 .grid-container-sign {
-  background-image: url("../../images/mainMountain.jpg");
+  background-image: url("https://manusantamaria.github.io/developing-our-self/images/mainMountain.jpg");
   background-size: cover;
   background-position: 50% 50%;
 }
