--- a/styles/views/_signIn.scss
+++ b/styles/views/_signIn.scss
@@ -1,5 +1,5 @@
 .grid-container-sign{
-    background-image: url("../../images/mainMountain.jpg");
+    background-image: url("https://manusantamaria.github.io/developing-our-self/images/mainMountain.jpg");
     background-size: cover;
     background-position: 50% 50%;
     .header-Sign {
